fixed z-index issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 a {
   color: inherit;
 }
+a:hover {
+  color: inherit;
+  text-decoration: none;
+}
 body {
   font-family: 'Source Sans Pro', sans-serif;
 }
@@ -118,10 +122,10 @@ body {
 }
 
 .tab-small {
-  font-size: 1.3em;
+  font-size: 1.1em;
   position: absolute;
   font-weight: lighter;
-  z-index: -1;
+  /*z-index: -1;*/
   line-height: 0.5em;
 	text-transform: none;
 	margin-top: -10px;
